# omero-test-build

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: omero_plugin.yml
omero_test_build/: urls.py  views.py
omero_test_build.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omero_test_build/templates/omero_test_build/: index.html
test/integration/: test_index.py
